--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,29 +33,41 @@ services:
       dockerfile: Dockerfile
     container_name: hookwatch
     restart: unless-stopped
-    ports:
-      - "${HOOKWATCH_PORT:-3000}:3000"
+    expose:
+      - "3000"
     environment:
       - PORT=3000
       - MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017
       - REDIS_URI=redis://redis:6379
+      - VIRTUAL_HOST=api.hookwatch.antcoders.dev
+      - LETSENCRYPT_HOST=api.hookwatch.antcoders.dev
+      - LETSENCRYPT_EMAIL=antcoderstoken@gmail.com
     depends_on:
       - mongodb
       - redis
     networks:
       - main-network
+      - nginx-proxy
 
   web-ui:
     image: nginx:alpine
-    container_name: web-ui
+    container_name: hookwatch-web-ui
     restart: unless-stopped
-    ports:
-      - "${WEB_UI_PORT:-8080}:80"
+    expose:
+      - "80"
+    environment:
+      - VIRTUAL_HOST=hookwatch.antcoders.dev
+      - LETSENCRYPT_HOST=hookwatch.antcoders.dev
+      - LETSENCRYPT_EMAIL=antcoderstoken@gmail.com
     volumes:
       - ./web:/usr/share/nginx/html
     networks:
       - main-network
+      - nginx-proxy
 
 networks:
   main-network:
     driver: bridge
+  nginx-proxy:
+    name: nginx-proxy
+    external: true
